# transformers-lab

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  self_attention.py  sitemap.xml  softmax.py
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
docs/: api.md
src/: __init__.py  feed_forward.py  layer_norm.py  multihead_attention.py  positional_encoding.py  self_attention.py
src/transformers_lab/: __init__.py  causal_mask.py  decoder.py  decoder_block.py  embedding.py  encoder.py  encoder_block.py  feed_forward.py  layer_norm.py  models.py  multihead_attention.py  positional_encoding.py  scaled_dot_product_attention.py  self_attention.py  softmax.py  weight.py
tests/: __init__.py  conftest.py  test_causal_mask.py  test_decoder.py  test_decoder_block.py  test_embedding.py  test_encoder.py  test_encoder_block.py  test_feed_forward.py  test_layer_norm.py  test_models.py  test_multihead_attention.py  test_positional_encoding.py  test_self_attention.py  test_softmax.py  test_weight.py
