[project]
name = "transformers-lab"
version = "0.2.1"
description = "Transformers lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
]

# ======================
# Dependency Groups
# ======================
[dependency-groups]

dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.15.0",
    "commitizen>=4.13.7",
    "pip-audit>=2.10.0",
    "bandit>=1.9.3",
    "mutmut>=3.4.0",
    "hypothesis>=6.151.6",
    "radon>=6.0.1",
    "vulture>=2.11",
    "cyclonedx-bom>=4.0.0",
]

doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]

# ======================
# Ruff
# ======================
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

# ======================
# MyPy (ultra strict)
# ======================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

# ======================
# Pytest
# ======================
[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "9.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src --cov-report=term-missing --doctest-modules"
testpaths = ["tests"]

# ======================
# Hypothesis
# ======================
[tool.hypothesis]
max_examples = 200
deadline = 500

# ======================
# Mutmut
# ======================
[tool.mutmut]
paths_to_mutate = ["src"]
runner = "pytest -q"
tests_dir = ["tests"]

# ======================
# Coverage
# ======================
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

# ======================
# Commitizen
# ======================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
